Renamed header to a proper title.

--- a/Home/index.html
+++ b/Home/index.html
@@ -51,7 +51,7 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
     <div class="container">
-        <h1>ourtransfi.org</h1>
+        <h1>The Transfiguration of Christ Parish</h1>
 
         <p>This site is currently undergoing construction.</p>
 
