--- a/Home/index.html
+++ b/Home/index.html
@@ -26,7 +26,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400'
           rel='stylesheet' type='text/css'>
 
-    <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
 </head>
 <body>
 <!--[if lt IE 7]>
@@ -104,11 +104,8 @@
     </footer>
 </div>
 <!-- /container -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script>window.jQuery
-|| document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-
-<script src="js/vendor/bootstrap.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 <script src="js/main.js"></script>
 </body>
