Added census link.

--- a/Home/index.html
+++ b/Home/index.html
@@ -94,7 +94,7 @@
             <li>Daily Mass (Monday to Saturday) - 6:15 am</li>
             <li>Every Wednesday & First Friday - 6:00 pm</li>
             <li>Baptism - Every Sunday at 11:30 am</li>
-            <li>Please inquire at the parish office for other services.</li>
+            <li>Please inquire at the Parish Office for other services.</li>
         </ul>
     </div>
     <hr>
