Adjusted padding on section 2, added blogger template file.

--- a/Home/index.html
+++ b/Home/index.html
@@ -49,7 +49,7 @@
         <div class="collapse navbar-collapse" id="navbar-links">
             <ul class="nav navbar-nav">
                 <li><a href="#">Liturgical Services</a></li>
-                <li><a href="#">News</a></li>
+                <li><a href="http://news.ourtransfi.org">News</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </div>
@@ -124,7 +124,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container" style="padding-bottom: 32px">
     <div class="col-md-8 col-md-offset-2">
         <h2>Liturgical Services</h2>
 
