Changed row classes into fluid containers to remove right-side excess padding.

--- a/Home/index.html
+++ b/Home/index.html
@@ -85,7 +85,7 @@
 </div>
 
 
-<div class="row">
+<div class="container-fluid">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
             <img src="images/gallery/1.jpg">
@@ -153,7 +153,7 @@
 </div>
 
 
-<div class="row">
+<div class="container-fluid">
     <div class="col-xs-6 col-md-3">
         <a href="#" class="thumbnail">
             <img src="images/gallery/5.jpg">
