Changed Google Map layout to occupy a single column for accessibility, and added a description for the blog post featurette.

--- a/Home/index.html
+++ b/Home/index.html
@@ -68,18 +68,25 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active section" style="background-image: url('images/image-01a.jpg'); padding-top: 750px">
+            <!-- Slide 1 - Parish Highlight -->
             <div class="carousel-caption jumbotron backtext">
                 <h1>The Transfiguration<br/>of Christ Parish</h1>
-
                 <p>M.L. Quezon St. Ext., Brgy San Roque, Antipolo City</p>
             </div>
         </div>
         <div class="item section" style="background-image: url('images/header-1.jpg'); padding-top: 750px">
+            <div class="carousel-caption jumbotron backtext" style="background-color: rgba(0,25,50,0.9)">
+                <h1>Vigil for Pope Francis</h1>
+                <p>Thanks for joining us in the event!</p>
+                <a class="btn btn-primary" role="button"
+                   href="http://news.ourtransfi.org">Read more...</a>
+            </div>
+            <!-- Slide 2 - Blog Post Highlight -->
         </div>
         <div class="item section" style="background-image: url('images/image-01b.jpg'); padding-top: 750px">
+            <!-- Slide 3 - Excess Slide -->
             <div class="carousel-caption jumbotron backtext">
                 <h1>The Transfiguration<br/>of Christ Parish</h1>
-
                 <p>M.L. Quezon St. Ext., Brgy San Roque, Antipolo City</p>
             </div>
         </div>
@@ -226,23 +233,22 @@
 
 <div class="container">
     <div class="col-md-6">
-        <h2>Facebook and Social</h2>
-        <p>Like us on Facebook!</p>
+        <h2>Contact Us</h2>
+        <p>Contact us via telephone: <span style="font-weight: bold">(02) 570-2722</span>. You can also contact us by leaving a message on our Facebook page.</p>
         <a class="btn btn-primary" role="button"
            href="http://www.facebook.com/ourtransfi">facebook.com/ourtransfi</a>
 
-
-    </div>
-    <div class="col-md-6">
-        <h2>Contact Us</h2>
-        <p>Contact us via telephone: (02) 570-2722 or leave a message on our Facebook page.</p>
+        <h2>Location</h2>
+        <p>The Transfiguration of Christ Parish is located at the M.L. Quezon St. Ext. in Antipolo City, Rizal. For convenience, refer to the Google Map on the right, or click the button below to view it in Google Maps.</p>
         <a class="btn btn-default" role="button" href="https://www.google.com.ph/maps/place/Transfiguration+Of+Christ+Parish/@14.5632215,121.1836781,18z/data=!4m2!3m1!1s0x3397c0b9c5cadb3f:0x55deeaf5184b2631?hl=en">Navigate via Google Maps</a>
+
+        <p></p>
     </div>
+
+    <div class="col-md-6" id="map-canvas">
+        </div>
 </div>
 
-<div class="container-fluid" id="map-canvas" style="margin-top: 32px">
-
-</div>
 <!-- /container -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
