Replaced heading with 12/12/14 announcement.

--- a/Home/index.html
+++ b/Home/index.html
@@ -62,7 +62,7 @@
     <ol class="carousel-indicators">
         <li data-target="#transfi-carousel-1" data-slide-to="0" class="active"></li>
         <li data-target="#transfi-carousel-1" data-slide-to="1"></li>
-        <li data-target="#transfi-carousel-1" data-slide-to="2"></li>
+        <!--<li data-target="#transfi-carousel-1" data-slide-to="2"></li>-->
     </ol>
 
     <!-- Wrapper for slides -->
@@ -74,6 +74,7 @@
                 <p>M.L. Quezon St. Ext., Brgy San Roque, Antipolo City</p>
             </div>
         </div>
+        <!--
         <div class="item section" style="background-image: url('images/header-1.jpg'); padding-top: 750px">
             <div class="carousel-caption jumbotron backtext" style="background-color: rgba(0,25,50,0.9)">
                 <h1>Vigil for Pope Francis</h1>
@@ -81,13 +82,15 @@
                 <a class="btn btn-primary" role="button"
                    href="http://news.ourtransfi.org">Read more...</a>
             </div>
-            <!-- Slide 2 - Blog Post Highlight -->
-        </div>
+
+        </div>-->
         <div class="item section" style="background-image: url('images/image-01b.jpg'); padding-top: 750px">
             <!-- Slide 3 - Excess Slide -->
-            <div class="carousel-caption jumbotron backtext">
-                <h1>The Transfiguration<br/>of Christ Parish</h1>
-                <p>M.L. Quezon St. Ext., Brgy San Roque, Antipolo City</p>
+            <div class="carousel-caption jumbotron backtext col-sm-12 col-md-8 col-lg-5">
+                <h1>12th Year Canonical Erection of the Parish</h1>
+                <p>Everyone is invited to come and participate in our celebration <span style="font-weight: bold">this Friday, starting at 6:00 pm at the Piazza della Trasfigurazione.</span></p>
+                <a class="btn btn-primary" role="button"
+                   href="http://news.ourtransfi.org">Read more...</a>
             </div>
         </div>
         ...
