Replaced title for 12/12/14.

--- a/Home/index.html
+++ b/Home/index.html
@@ -87,7 +87,7 @@
         <div class="item section" style="background-image: url('images/image-01b.jpg'); padding-top: 750px">
             <!-- Slide 3 - Excess Slide -->
             <div class="carousel-caption jumbotron backtext col-sm-12 col-md-8 col-lg-5">
-                <h1>12th Year Anniversary of the Dedication of the Church</h1>
+                <h1>12th Year Anniversary of the Dedication of the Parish</h1>
                 <p>Everyone is invited to come and participate in our celebration <span style="font-weight: bold">this Friday, starting at 6:00 pm at the Piazza della Trasfigurazione.</span></p>
                 <a class="btn btn-primary" role="button"
                    href="http://news.ourtransfi.org">Read more...</a>
