Added the parish logo next to the about block; added favicon for the site.

--- a/Home/index.html
+++ b/Home/index.html
@@ -67,10 +67,12 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-        <div class="item active section" style="background-image: url('images/image-01a.jpg'); padding-top: 750px">
+        <div class="item active section"
+             style="background-image: url('images/image-01a.jpg'); padding-top: 750px">
             <!-- Slide 1 - Parish Highlight -->
             <div class="carousel-caption jumbotron backtext">
                 <h1>The Transfiguration<br/>of Christ Parish</h1>
+
                 <p>M.L. Quezon St. Ext., Brgy San Roque, Antipolo City</p>
             </div>
         </div>
@@ -84,11 +86,15 @@
             </div>
 
         </div>-->
-        <div class="item section" style="background-image: url('images/image-01b.jpg'); padding-top: 750px">
+        <div class="item section"
+             style="background-image: url('images/image-01b.jpg'); padding-top: 750px">
             <!-- Slide 3 - Excess Slide -->
             <div class="carousel-caption jumbotron backtext col-sm-12 col-md-8 col-lg-5">
                 <h1>12th Year Anniversary of the Dedication of the Parish</h1>
-                <p>Everyone is invited to come and participate in our celebration <span style="font-weight: bold">this Friday, starting at 6:00 pm at the Piazza della Trasfigurazione.</span></p>
+
+                <p>Everyone is invited to come and participate in our celebration <span
+                        style="font-weight: bold">this Friday, starting at 6:00 pm at the Piazza della Trasfigurazione.</span>
+                </p>
                 <a class="btn btn-primary" role="button"
                    href="http://news.ourtransfi.org">Read more...</a>
             </div>
@@ -108,7 +114,14 @@
 </div>
 
 <div class="container" style="padding-bottom: 32px">
-    <div class="col-md-8 col-md-offset-2">
+    <div class="col-md-6">
+        <div class="thumbnail">
+            <a href="images/TOCP-Logo-Web.png">
+                <img src="images/TOCP-Logo-Web.png" alt="The Transfiguration of Christ Parish Logo"/>
+            </a>
+        </div>
+    </div>
+    <div class="col-md-6">
         <h2>About the Parish</h2>
 
         <p>The Transfiguration of Christ Parish is relatively a new parish in the Diocese of
@@ -228,7 +241,8 @@
 <div class="row center-block">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
         <a class="btn btn-primary center-block btn-lg" role="button"
-           href="http://news.ourtransfi.org" style="font-size: x-large">Proceed to News and Announcements</a>
+           href="http://news.ourtransfi.org" style="font-size: x-large">Proceed to News and
+            Announcements</a>
     </div>
 </div>
 
@@ -237,19 +251,26 @@
 <div class="container">
     <div class="col-md-6">
         <h2>Contact Us</h2>
-        <p>Contact us via telephone: <span style="font-weight: bold">(02) 570-2722</span>. You can also contact us by leaving a message on our Facebook page.</p>
+
+        <p>Contact us via telephone: <span style="font-weight: bold">(02) 570-2722</span>. You can
+            also contact us by leaving a message on our Facebook page.</p>
         <a class="btn btn-primary" role="button"
            href="http://www.facebook.com/ourtransfi">facebook.com/ourtransfi</a>
 
         <h2>Location</h2>
-        <p>The Transfiguration of Christ Parish is located at the M.L. Quezon St. Ext. in Antipolo City, Rizal. For convenience, refer to the Google Map on the right, or click the button below to view it in Google Maps.</p>
-        <a class="btn btn-default" role="button" href="https://www.google.com.ph/maps/place/Transfiguration+Of+Christ+Parish/@14.5632215,121.1836781,18z/data=!4m2!3m1!1s0x3397c0b9c5cadb3f:0x55deeaf5184b2631?hl=en">Navigate via Google Maps</a>
+
+        <p>The Transfiguration of Christ Parish is located at the M.L. Quezon St. Ext. in Antipolo
+            City, Rizal. For convenience, refer to the Google Map on the right, or click the button
+            below to view it in Google Maps.</p>
+        <a class="btn btn-default" role="button"
+           href="https://www.google.com.ph/maps/place/Transfiguration+Of+Christ+Parish/@14.5632215,121.1836781,18z/data=!4m2!3m1!1s0x3397c0b9c5cadb3f:0x55deeaf5184b2631?hl=en">Navigate
+            via Google Maps</a>
 
         <p></p>
     </div>
 
     <div class="col-md-6" id="map-canvas">
-        </div>
+    </div>
 </div>
 
 <!-- /container -->
