Fixed page layout issues with the logo and heading text on smaller screens.

--- a/Home/index.html
+++ b/Home/index.html
@@ -89,13 +89,13 @@
         <div class="item section"
              style="background-image: url('images/image-01b.jpg'); padding-top: 750px">
             <!-- Slide 3 - Excess Slide -->
-            <div class="carousel-caption jumbotron backtext col-sm-12 col-md-8 col-lg-5">
+            <div class="carousel-caption jumbotron backtext col-md-5">
                 <h1>12th Year Anniversary of the Dedication of the Parish</h1>
 
                 <p>Everyone is invited to come and participate in our celebration <span
                         style="font-weight: bold">this Friday, starting at 6:00 pm at the Piazza della Trasfigurazione.</span>
                 </p>
-                <a class="btn btn-primary" role="button"
+                <a class="btn btn-primary btn-lg" role="button"
                    href="http://news.ourtransfi.org">Read more...</a>
             </div>
         </div>
@@ -114,14 +114,14 @@
 </div>
 
 <div class="container" style="padding-bottom: 32px">
-    <div class="col-md-6">
+    <div class="hidden-sm col-md-6">
         <div class="thumbnail">
             <a href="images/TOCP-Logo-Web.png">
                 <img src="images/TOCP-Logo-Web.png" alt="The Transfiguration of Christ Parish Logo"/>
             </a>
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-sm-12 col-md-6">
         <h2>About the Parish</h2>
 
         <p>The Transfiguration of Christ Parish is relatively a new parish in the Diocese of
@@ -270,6 +270,14 @@
     </div>
 
     <div class="col-md-6" id="map-canvas">
+    </div>
+
+    <div class="col-sm-12 hidden-md" style="margin-top: 45px">
+        <div class="thumbnail">
+            <a href="images/TOCP-Logo-Web.png">
+                <img src="images/TOCP-Logo-Web.png" alt="The Transfiguration of Christ Parish Logo"/>
+            </a>
+        </div>
     </div>
 </div>
 
