--- a/Home/index.html
+++ b/Home/index.html
@@ -272,7 +272,7 @@
     <div class="col-md-6" id="map-canvas">
     </div>
 
-    <div class="col-sm-12 hidden-md" style="margin-top: 45px">
+    <div class="col-sm-12 hidden-md hidden-lg" style="margin-top: 45px">
         <div class="thumbnail">
             <a href="images/TOCP-Logo-Web.png">
                 <img src="images/TOCP-Logo-Web.png" alt="The Transfiguration of Christ Parish Logo"/>
