Added new Word of Life section, December 2014 edition and header section.

--- a/Home/index.html
+++ b/Home/index.html
@@ -11,7 +11,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>The Transfiguration of Christ Parish</title>
-    <meta name="description" content="">
+    <meta name="description" content="A simple about page for the Transfiguration of Christ Parish"/>
+    <meta name="author" content="Jeriel Jan del Prado"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -45,13 +46,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Transfiguration of Christ Parish</a>
+            <a class="navbar-brand" href="http://www.ourtransfi.org/">Transfiguration of Christ Parish</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-links">
             <ul class="nav navbar-nav">
-                <li><a href="#">Liturgical Services</a></li>
                 <li><a href="http://news.ourtransfi.org">News</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="http://www.ourtransfi.org/wordoflife/">Word of Life</a></li>
             </ul>
         </div>
     </div>
@@ -62,7 +62,7 @@
     <ol class="carousel-indicators">
         <li data-target="#transfi-carousel-1" data-slide-to="0" class="active"></li>
         <li data-target="#transfi-carousel-1" data-slide-to="1"></li>
-        <!--<li data-target="#transfi-carousel-1" data-slide-to="2"></li>-->
+        <li data-target="#transfi-carousel-1" data-slide-to="2"></li>
     </ol>
 
     <!-- Wrapper for slides -->
@@ -76,28 +76,28 @@
                 <p>M.L. Quezon St. Ext., Brgy San Roque, Antipolo City</p>
             </div>
         </div>
-        <!--
-        <div class="item section" style="background-image: url('images/header-1.jpg'); padding-top: 750px">
-            <div class="carousel-caption jumbotron backtext" style="background-color: rgba(0,25,50,0.9)">
-                <h1>Vigil for Pope Francis</h1>
-                <p>Thanks for joining us in the event!</p>
-                <a class="btn btn-primary" role="button"
-                   href="http://news.ourtransfi.org">Read more...</a>
-            </div>
-
-        </div>-->
         <div class="item section"
              style="background-image: url('images/image-01b.jpg'); padding-top: 750px">
             <!-- Slide 3 - Excess Slide -->
+            <a href="http://news.ourtransfi.org">
             <div class="carousel-caption jumbotron backtext col-md-5">
                 <h1>12th Year Anniversary of the Dedication of the Parish</h1>
 
                 <p>Everyone is invited to come and participate in our celebration <span
                         style="font-weight: bold">this Friday, starting at 6:00 pm at the Piazza della Trasfigurazione.</span>
-                </p>
-                <a class="btn btn-primary btn-lg" role="button"
-                   href="http://news.ourtransfi.org">Read more...</a>
+                </p>                        go
+
             </div>
+            </a>
+        </div>
+
+        <div class="item section" style="background-image: url('images/header-2.jpg'); padding-top: 750px">
+            <a href="wordoflife/">
+            <div class="carousel-caption jumbotron backtext" style="background-color: rgba(0,25,50,0.9)">
+                <h1>Word of Life</h1>
+                <p>December slides are now available for download.</p>
+            </div>
+            </a>
         </div>
         ...
     </div>
@@ -163,7 +163,7 @@
     </div>
 </div>
 
-<div class="jumbotron section" id="section-2">
+<div class="jumbotron section" id="section-2" style="padding-top: 300px">
     <div class="container backtext">
         <div class="col-md-offset-6" style="text-align: right">
             <h2>Mission</h2>
