Changed comments, removed blue background for Word of Life

--- a/Home/index.html
+++ b/Home/index.html
@@ -78,7 +78,7 @@
         </div>
         <div class="item section"
              style="background-image: url('images/image-01b.jpg'); padding-top: 750px">
-            <!-- Slide 3 - Excess Slide -->
+            <!-- Slide 2 - 12/12/14 -->
             <a href="http://news.ourtransfi.org">
             <div class="carousel-caption jumbotron backtext col-md-5">
                 <h1>12th Year Anniversary of the Dedication of the Parish</h1>
@@ -92,8 +92,9 @@
         </div>
 
         <div class="item section" style="background-image: url('images/header-2.jpg'); padding-top: 750px">
-            <a href="wordoflife/">
-            <div class="carousel-caption jumbotron backtext" style="background-color: rgba(0,25,50,0.9)">
+            <!-- Slide 3 - Word of Life -->
+            <a href="http://www.ourtransfi.org/wordoflife/">
+            <div class="carousel-caption jumbotron backtext">
                 <h1>Word of Life</h1>
                 <p>December slides are now available for download.</p>
             </div>
