Added Facebook Open Graph metadata for a nicer look when sharing the site's pages.

--- a/Home/index.html
+++ b/Home/index.html
@@ -15,6 +15,15 @@
     <meta name="author" content="Jeriel Jan del Prado"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Facebook Open Graph Metadata -->
+    <meta property="og:title" content="The Transfiguration of Christ Parish" />
+    <meta property="og:site_name" content="The Transfiguration of Christ Parish"/>
+    <meta property="og:url" content="http://www.ourtransfi.org">
+    <meta property="og:description" content="The Transfiguration of Christ Parish is relatively a new parish in the Diocese of
+            Antipolo, having been canonically erected on December 12, 2002. The parish church is
+            located along M.L. Quezon St. Ext., Brgy San Roque, Antipolo City."/>
+    <meta property="og:image" content="http://www.ourtransfi.org/images/image-01a.jpg"/>
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <style>
         body {
