--- a/Home/wordoflife/index.html
+++ b/Home/wordoflife/index.html
@@ -12,9 +12,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Word of Life - Downloads</title>
     <meta name="description"
-          content="A simple about page for the Transfiguration of Christ Parish"/>
+          content="Word of Life presentation downloads"/>
     <meta name="author" content="Jeriel Jan del Prado"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Facebook Open Graph Metadata -->
+    <meta property="og:title" content="Word of Life - Downloads" />
+    <meta property="og:site_name" content="The Transfiguration of Christ Parish"/>
+    <meta property="og:url" content="http://www.ourtransfi.org/wordoflife/"/>
+    <meta property="og:description" content="Download the latest monthly Word of Life presentations here."/>
+    <meta property="og:image" content="http://www.ourtransfi.org/images/header-2.jpg"/>
 
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <style>
