Changed header to greet the parish anniversary

--- a/Home/index.html
+++ b/Home/index.html
@@ -90,11 +90,10 @@
             <!-- Slide 2 - 12/12/14 -->
             <a href="http://news.ourtransfi.org">
             <div class="carousel-caption jumbotron backtext col-md-5">
-                <h1>12th Year Anniversary of the Dedication of the Parish</h1>
+                <h1>Happy Anniversary, Transfi!</h1>
 
-                <p>Everyone is invited to come and participate in our celebration <span
-                        style="font-weight: bold">this Friday, starting at 6:00 pm at the Piazza della Trasfigurazione.</span>
-                </p>                        go
+                <p>The parish celebrated its 12th year anniversary last December 12, 2014.
+                </p>
 
             </div>
             </a>
