--- a/Home/index.html
+++ b/Home/index.html
@@ -11,12 +11,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>The Transfiguration of Christ Parish</title>
-    <meta name="description" content="A simple about page for the Transfiguration of Christ Parish"/>
+    <meta name="description"
+          content="A simple about page for the Transfiguration of Christ Parish"/>
     <meta name="author" content="Jeriel Jan del Prado"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Facebook Open Graph Metadata -->
-    <meta property="og:title" content="The Transfiguration of Christ Parish" />
+    <meta property="og:title" content="The Transfiguration of Christ Parish"/>
     <meta property="og:site_name" content="The Transfiguration of Christ Parish"/>
     <meta property="og:url" content="http://www.ourtransfi.org">
     <meta property="og:description" content="The Transfiguration of Christ Parish is relatively a new parish in the Diocese of
@@ -40,7 +41,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
     <link rel="stylesheet" href="css/ourtransfi.css">
 </head>
-<body>
+<body data-spy="scroll" data-target="#navbar-links" data-offset="90">
 <!--[if lt IE 7]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a
         href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -55,17 +56,21 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="http://www.ourtransfi.org/">Transfiguration of Christ Parish</a>
+            <a class="navbar-brand" href="http://www.ourtransfi.org/">Transfiguration of Christ
+                Parish</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-links">
             <ul class="nav navbar-nav">
                 <li><a href="http://news.ourtransfi.org">News</a></li>
+                <li><a href="#whats-new">What's New</a></li>
+                <li><a href="#about-parish">About the Parish</a></li>
+                <li><a href="#schedules">Liturgical Services</a></li>
+                <li><a href="#contact-us">Contact Us</a></li>
                 <li><a href="http://www.ourtransfi.org/wordoflife/">Word of Life</a></li>
             </ul>
         </div>
     </div>
 </div>
-
 <div id="transfi-carousel-1" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -75,7 +80,7 @@
     </ol>
 
     <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
+    <div class="carousel-inner" role="listbox" id="whats-new">
         <div class="item active section"
              style="background-image: url('images/image-01a.jpg'); padding-top: 750px">
             <!-- Slide 1 - Parish Highlight -->
@@ -89,34 +94,36 @@
              style="background-image: url('images/image-01b.jpg'); padding-top: 750px">
             <!-- Slide 2 - 12/12/14 -->
             <a href="http://news.ourtransfi.org">
-            <div class="carousel-caption jumbotron backtext col-md-5">
-                <h1>Happy Anniversary, Transfi!</h1>
+                <div class="carousel-caption jumbotron backtext col-md-5">
+                    <h1>Happy Anniversary, Transfi!</h1>
 
-                <p>The parish celebrated its 12th year anniversary last December 12, 2014.
-                </p>
+                    <p>The parish celebrated its 12th year anniversary last December 12, 2014.
+                    </p>
 
-            </div>
+                </div>
             </a>
         </div>
 
-        <div class="item section" style="background-image: url('images/header-2.jpg'); padding-top: 750px">
+        <div class="item section"
+             style="background-image: url('images/header-2.jpg'); padding-top: 750px">
             <!-- Slide 3 - Word of Life -->
             <a href="http://www.ourtransfi.org/wordoflife/">
-            <div class="carousel-caption jumbotron backtext">
-                <h1>Word of Life</h1>
-                <p>December slides are now available for download.</p>
-            </div>
+                <div class="carousel-caption jumbotron backtext">
+                    <h1>Word of Life</h1>
+
+                    <p>December slides are now available for download.</p>
+                </div>
             </a>
         </div>
         ...
     </div>
 
     <!-- Controls -->
-    <a class="left carousel-control" href="#transfi-carousel-1" role="button" data-slide="prev">
+    <a class="left carousel-control" data-target="#transfi-carousel-1" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" href="#transfi-carousel-1" role="button" data-slide="next">
+    <a class="right carousel-control" data-target="#transfi-carousel-1" role="button" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
@@ -126,12 +133,13 @@
     <div class="hidden-sm col-md-6">
         <div class="thumbnail">
             <a href="images/TOCP-Logo-Web.png">
-                <img src="images/TOCP-Logo-Web.png" alt="The Transfiguration of Christ Parish Logo"/>
+                <img src="images/TOCP-Logo-Web.png"
+                     alt="The Transfiguration of Christ Parish Logo"/>
             </a>
         </div>
     </div>
     <div class="col-sm-12 col-md-6">
-        <h2>About the Parish</h2>
+        <h2 id="about-parish">About the Parish</h2>
 
         <p>The Transfiguration of Christ Parish is relatively a new parish in the Diocese of
             Antipolo, having been canonically erected on December 12, 2002. The parish church is
@@ -190,7 +198,7 @@
 
 <div class="container" style="padding-bottom: 32px">
     <div class="col-md-8 col-md-offset-2">
-        <h2>Liturgical Services</h2>
+        <h2 id="schedules">Liturgical Services</h2>
 
         <h3>Sunday Masses</h3>
         Masses are available during:
@@ -259,10 +267,14 @@
 
 <div class="container">
     <div class="col-md-6">
-        <h2>Contact Us</h2>
+        <h2 id="contact-us">Contact Us</h2>
 
-        <p>Contact us via telephone: <span style="font-weight: bold">(02) 570-2722</span>. You can
-            also contact us by leaving a message on our Facebook page.</p>
+        <p>For general inquiries and concerns, contact us via our telephone number:
+            <br/><span style="font-weight: bold">(02) 570-2722</span>
+            <br/>You can also contact us by leaving a message on our Facebook page.</p>
+
+        <p>For website-related concerns and feedback, email <a href="mailto:admin@ourtransfi.org">admin@ourtransfi.org</a>.
+            <br/><span style="font-weight: bold">Feedback is highly appreciated!</span></p>
         <a class="btn btn-primary" role="button"
            href="http://www.facebook.com/ourtransfi">facebook.com/ourtransfi</a>
 
@@ -284,11 +296,17 @@
     <div class="col-sm-12 hidden-md hidden-lg" style="margin-top: 45px">
         <div class="thumbnail">
             <a href="images/TOCP-Logo-Web.png">
-                <img src="images/TOCP-Logo-Web.png" alt="The Transfiguration of Christ Parish Logo"/>
+                <img src="images/TOCP-Logo-Web.png"
+                     alt="The Transfiguration of Christ Parish Logo"/>
             </a>
         </div>
     </div>
 </div>
+
+<!-- Footer -->
+<!--<div class="container-fluid" id="footer" style="text-align: center">-->
+    <!--Made using Bootstrap-->
+<!--</div>-->
 
 <!-- /container -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -298,10 +316,17 @@
 
 <!-- Google Analytics -->
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-57620230-2', 'auto');
     ga('send', 'pageview');
