--- a/Home/index.html
+++ b/Home/index.html
@@ -77,13 +77,14 @@
         <li data-target="#transfi-carousel-1" data-slide-to="0" class="active"></li>
         <li data-target="#transfi-carousel-1" data-slide-to="1"></li>
         <li data-target="#transfi-carousel-1" data-slide-to="2"></li>
+        <li data-target="#transfi-carousel-1" data-slide-to="3"></li>
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox" id="whats-new">
         <div class="item active section"
              style="background-image: url('images/image-01a.jpg'); padding-top: 750px">
-            <!-- Slide 1 - Parish Highlight -->
+            <!-- Slide - Parish Highlight -->
             <div class="carousel-caption jumbotron backtext">
                 <h1>The Transfiguration<br/>of Christ Parish</h1>
 
@@ -91,8 +92,24 @@
             </div>
         </div>
         <div class="item section"
+             style="background-image: url('images/header-1.jpg'); padding-top: 750px">
+            <!-- Slide - Simbang Gabi Schedules -->
+            <a href="#schedules-special">
+                <div class="carousel-caption jumbotron backtext col-md-5">
+                    <h1>Simbang Gabi Schedules</h1>
+
+                    <p>
+                        See the Simbang Gabi schedules here.
+                    </p>
+                    <span class="attribution">"Adoration of the Shepherds" by Gerard van Honthorst, 1622</span>
+
+                </div>
+            </a>
+        </div>
+
+        <div class="item section"
              style="background-image: url('images/image-01b.jpg'); padding-top: 750px">
-            <!-- Slide 2 - 12/12/14 -->
+            <!-- Slide - 12/12/14 -->
             <a href="http://news.ourtransfi.org">
                 <div class="carousel-caption jumbotron backtext col-md-5">
                     <h1>Happy Anniversary, Transfi!</h1>
@@ -106,7 +123,7 @@
 
         <div class="item section"
              style="background-image: url('images/header-2.jpg'); padding-top: 750px">
-            <!-- Slide 3 - Word of Life -->
+            <!-- Slide - Word of Life -->
             <a href="http://www.ourtransfi.org/wordoflife/">
                 <div class="carousel-caption jumbotron backtext">
                     <h1>Word of Life</h1>
@@ -118,11 +135,13 @@
     </div>
 
     <!-- Controls -->
-    <a class="left carousel-control" data-target="#transfi-carousel-1" role="button" data-slide="prev">
+    <a class="left carousel-control" data-target="#transfi-carousel-1" role="button"
+       data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" data-target="#transfi-carousel-1" role="button" data-slide="next">
+    <a class="right carousel-control" data-target="#transfi-carousel-1" role="button"
+       data-slide="next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
@@ -196,7 +215,7 @@
 </div>
 
 <div class="container" style="padding-bottom: 32px">
-    <div class="col-md-8 col-md-offset-2">
+    <div class="col-md-6">
         <h2 id="schedules">Liturgical Services</h2>
 
         <h3>Sunday Masses</h3>
@@ -220,6 +239,37 @@
         Baptismal arrangements are available every Sunday at 11:30 pm.
 
         <p>For other services, please inquire at the Parish Office.</p>
+    </div>
+    <div class="col-md-6">
+        <h2 id="schedules-special">Advent Masses' Schedule</h2>
+
+        <h3>Simbang Gabi sa Transfi</h3>
+        <ul>
+            <li>15-23 December 2014 (8:30 pm)</li>
+            <li>16-24 December 2014 (4:30 am)</li>
+        </ul>
+
+        <h3>Christmas Eve Mass</h3>
+        Christmas Eve Mass will be held at 11:00 pm.
+
+        <h3>Christmas Day Masses </h3>
+        <ul>
+            <li>8:00 am</li>
+            <li>9:30 am</li>
+            <li>5:00 pm</li>
+            <li>6:30 pm</li>
+        </ul>
+
+        <h3>New Year's Eve Mass</h3>
+        New Year's Eve Mass will be held at 9:00 pm.
+
+        <h3>New Year's Day Mass</h3>
+        <ul>
+            <li>8:00 am</li>
+            <li>9:30 am</li>
+            <li>5:00 pm</li>
+            <li>6:30 pm</li>
+        </ul>
     </div>
 </div>
 
@@ -304,7 +354,7 @@
 
 <!-- Footer -->
 <!--<div class="container-fluid" id="footer" style="text-align: center">-->
-    <!--Made using Bootstrap-->
+<!--Made using Bootstrap-->
 <!--</div>-->
 
 <!-- /container -->
