Reduced navbar word length, formatting changes, minor layout adjustments.

--- a/Home/index.html
+++ b/Home/index.html
@@ -56,15 +56,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="http://www.ourtransfi.org/">Transfiguration of Christ
+            <a class="navbar-brand" href="#whats-new">Transfiguration of Christ
                 Parish</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-links">
             <ul class="nav navbar-nav">
                 <li><a href="http://news.ourtransfi.org">News</a></li>
                 <li><a href="#whats-new">What's New</a></li>
-                <li><a href="#about-parish">About the Parish</a></li>
-                <li><a href="#schedules">Liturgical Services</a></li>
+                <li><a href="#about-parish">About</a></li>
+                <li><a href="#schedules">Schedules</a></li>
                 <li><a href="#contact-us">Contact Us</a></li>
                 <li><a href="http://www.ourtransfi.org/wordoflife/">Word of Life</a></li>
             </ul>
@@ -215,9 +215,8 @@
 </div>
 
 <div class="container" style="padding-bottom: 32px">
+    <div class="col-sm-12"><h2 id="schedules">Liturgical Services</h2></div>
     <div class="col-md-6">
-        <h2 id="schedules">Liturgical Services</h2>
-
         <h3>Sunday Masses</h3>
         Masses are available during:
         <ul>
@@ -241,18 +240,18 @@
         <p>For other services, please inquire at the Parish Office.</p>
     </div>
     <div class="col-md-6">
-        <h2 id="schedules-special">Advent Masses' Schedule</h2>
+        <h3 id="schedules-special">Advent Mass Schedules</h3>
 
-        <h3>Simbang Gabi sa Transfi</h3>
+        <h4>Simbang Gabi sa Transfi</h4>
         <ul>
             <li>15-23 December 2014 (8:30 pm)</li>
             <li>16-24 December 2014 (4:30 am)</li>
         </ul>
 
-        <h3>Christmas Eve Mass</h3>
+        <h4>Christmas Eve Mass</h4>
         Christmas Eve Mass will be held at 11:00 pm.
 
-        <h3>Christmas Day Masses </h3>
+        <h4>Christmas Day Masses </h4>
         <ul>
             <li>8:00 am</li>
             <li>9:30 am</li>
@@ -260,10 +259,10 @@
             <li>6:30 pm</li>
         </ul>
 
-        <h3>New Year's Eve Mass</h3>
+        <h4>New Year's Eve Mass</h4>
         New Year's Eve Mass will be held at 9:00 pm.
 
-        <h3>New Year's Day Mass</h3>
+        <h4>New Year's Day Mass</h4>
         <ul>
             <li>8:00 am</li>
             <li>9:30 am</li>
