--- a/Home/index.html
+++ b/Home/index.html
@@ -172,6 +172,12 @@
             <li>The parish has its own Columbarium & Lazarus' Memorial Chapels.</li>
         </ul>
     </div>
+
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <a class="btn btn-primary center-block btn-lg" role="button"
+           href="http://news.ourtransfi.org" style="font-size: x-large">News and
+            Announcements</a>
+    </div>
 </div>
 
 
@@ -302,16 +308,6 @@
         </div>
     </div>
 </div>
-
-<div class="row center-block">
-    <div class="col-xs-12 col-md-6 col-md-offset-3">
-        <a class="btn btn-primary center-block btn-lg" role="button"
-           href="http://news.ourtransfi.org" style="font-size: x-large">Proceed to News and
-            Announcements</a>
-    </div>
-</div>
-
-<hr/>
 
 <div class="container">
     <div class="col-md-6">
