--- a/Home/index.html
+++ b/Home/index.html
@@ -10,9 +10,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+    <!-- Basic Page Information -->
     <title>The Transfiguration of Christ Parish</title>
     <meta name="description"
-          content="A simple about page for the Transfiguration of Christ Parish"/>
+          content="The Transfiguration of Christ Parish is relatively a new parish in the Diocese of
+            Antipolo, having been canonically erected on December 12, 2002. The parish church is
+            located along M.L. Quezon St. Ext., Brgy San Roque, Antipolo City."/>
     <meta name="author" content="Jeriel Jan del Prado"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -35,7 +39,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,600,400' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,600,400' rel='stylesheet'
+          type='text/css'>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
     <link rel="stylesheet" href="css/ourtransfi.css">
@@ -45,6 +50,33 @@
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a
         href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
+
+<!-- Schema.org + Rich Snippets Metadata -->
+<div itemscope itemtype="http://schema.org/Organization" style="display: none">
+    <span itemprop="name" content="The Transfiguration of Christ Parish"></span>
+    <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+        <span itemprop="streetAddress" content="M.L. Quezon St. Ext., Brgy San Roque"></span>,
+        <span itemprop="addressLocality" content="Antipolo City"></span>
+        <span itemprop="addressRegion" content="Rizal"></span>.
+        <span itemprop="addressCountry" content="PH"></span>
+        <span itemprop="postalCode" content="1870"></span>
+    </div>
+    <div itemprop="location">
+        <span itemscope itemtype="http://schema.org/Place">
+          <div itemprop="geo">
+            <span itemscope itemtype="http://schema.org/GeoCoordinates">
+              <span property="latitude" content="14.563128"></span>
+              <span property="longitude" content="121.183426"></span>
+            </span>
+          </div>
+        </span>
+    </div>
+    <span itemprop="email" content="admin@ourtransfi.org"></span>
+    <span itemprop="logo" content="http://www.ourtransfi.org/images/TOCP-Logo-Web.png"></span>
+    <span itemprop="telephone" content="(02) 570-2722"></span>
+    <span itemprop="url" content="http://www.ourtransfi.org"></span>
+</div>
+
 <div class="navbar navbar-fixed-top" role="navigation" id="navigation-bar">
     <div class="container">
         <div class="navbar-header">
