Corrected geolocation metadata.

--- a/Home/index.html
+++ b/Home/index.html
@@ -54,22 +54,18 @@
 <!-- Schema.org + Rich Snippets Metadata -->
 <div itemscope itemtype="http://schema.org/Organization" style="display: none">
     <span itemprop="name" content="The Transfiguration of Christ Parish"></span>
+    <div itemprop="location" itemscope itemtype="http://schema.org/Place">
+          <div itemprop="geo" itemscope itemtype="http://schema.org/GeoCoordinates">
+              <span itemprop="latitude" content="14.563128"></span>
+              <span itemprop="longitude" content="121.183426"></span>
+          </div>
+    </div>
     <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
         <span itemprop="streetAddress" content="M.L. Quezon St. Ext., Brgy San Roque"></span>,
         <span itemprop="addressLocality" content="Antipolo City"></span>
         <span itemprop="addressRegion" content="Rizal"></span>.
         <span itemprop="addressCountry" content="PH"></span>
         <span itemprop="postalCode" content="1870"></span>
-    </div>
-    <div itemprop="location">
-        <span itemscope itemtype="http://schema.org/Place">
-          <div itemprop="geo">
-            <span itemscope itemtype="http://schema.org/GeoCoordinates">
-              <span property="latitude" content="14.563128"></span>
-              <span property="longitude" content="121.183426"></span>
-            </span>
-          </div>
-        </span>
     </div>
     <span itemprop="email" content="admin@ourtransfi.org"></span>
     <span itemprop="logo" content="http://www.ourtransfi.org/images/TOCP-Logo-Web.png"></span>
